# bleague

./: .ghci  .gitignore  .ordeal  bleague.cabal  package.json  stack.yaml  tsconfig.json  tsd.json  typings.json
server/: Main.hs  MyPrelude.hs  Types.hs  Version.hs
server/BLeague/: Api.hs  Auth.hs  Crud.hs  Models.hs  Types.hs
server/BLeague/Models/: .#Standing.hs  Fixture.hs  Session.hs  Standing.hs  User.hs
web/: Main.hs  dev_server.js  index.html
web/app/: actions.ts  index.tsx  reducers.ts
web/app/components/: app.tsx  counter_list.tsx  league_table.tsx  league_table_item.tsx  login.tsx
web/app/persistence/: store.ts
web/app/utils/: configure-store.ts
web/config/: webpack.dev.js
web/lib/: persistence.ts
web/typings/: tsd.d.ts
