name:                bleague
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/bleague#readme
license:             BSD3
license-file:        LICENSE
author:              Ardin Fardiansyah
maintainer:          ardin@ngublag.com
copyright:           2016 Ardin Fardiansyah
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable bleague
  hs-source-dirs:      server
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , either
                     , http-types
                     , mtl
                     , network-uri
                     , resource-pool
                     , rethinkdb
                     , safe
                     , servant >= 0.5
                     , servant-docs
                     , servant-server >= 0.5
                     , text
                     , time
                     , transformers
                     , unordered-containers
                     , wai
                     , wai-cors
                     , wai-extra
                     , wai-middleware-static
                     , warp
  default-language:    Haskell2010

test-suite bleague-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bleague
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ardfard/bleague
